fixed broken css rule

--- a/css/default.css
+++ b/css/default.css
@@ -118,7 +118,7 @@ code {
   padding: 2px;
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
   color: #AAA;
   border: 1px solid #AAA;
   border-radius: 50%;
